--- a/index.css
+++ b/index.css
@@ -13,7 +13,18 @@ body{
     width: 100%;  
     display: none;
 }
-
+#Navbar-1 a:hover{
+    border-bottom: 1px aqua solid;
+    transition: 1s;
+}
+.Nav-color-1{
+    background-color: #070f1d;
+    color: #ffe4c4;
+}
+.Nav-color-2{
+    background-color: #ffe4c4;
+    color: #ffe4c4;
+}
 .head-section{   
     height: 7vh;
     display: flex;
@@ -60,7 +71,7 @@ body{
 .V1{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     background-color: bisque;
     height: 33vh;
@@ -69,7 +80,7 @@ body{
 .V2{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     color: bisque;
     background-color: #070f1d;
@@ -77,7 +88,7 @@ body{
 
 }
 #Valores p{
-    margin: 5% 10%;
+    margin: 0% 10%;
 }
 
 
@@ -245,7 +256,7 @@ body{
         width: 100%;
     }
     .caro-item{
-        height: 73vh;
+        height: 75vh;
     }
     #Experiencia{
         height: auto;
