--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body{
 #About-Me{
     top: 0vh;
     padding: 0% 10%;
-    background-image: url(/img/pexels-free-nature-stock-974471.jpg);
+    background-image: url(/img/General/nature.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     text-align: center;
