--- a/index.css
+++ b/index.css
@@ -1,7 +1,39 @@
 body{
     background-color: #070f1d;
+
     padding: 0%;
     margin: 0%;
+    
+}
+
+.h-70{
+    height: 70%;
+}
+
+.h-30{
+    height: 30%;
+}
+
+.h-90{
+    height: 90%;
+}
+.h95px{
+    height: 120px;
+
+}
+
+.h400{
+    height: auto;
+}
+
+.section-tec{
+    border: #ffe4c4 1px solid;
+    background-color: #070f1d;
+    opacity: 1;
+    background-image:  radial-gradient(#4ab9d5 0.5px, transparent 0.5px), radial-gradient(#fbf3e9 0.5px, #10213f 0.5px);
+    background-size: 80px 80px;
+    background-position: 0 0,40px 40px;
+    border-radius: 3px;
 }
 
 #Navbar-1{
@@ -22,7 +54,7 @@ body{
     color: #ffe4c4;
 }
 .Nav-color-2{
-    background-color: #ffe4c4;
+
     color: #ffe4c4;
 }
 .head-section{   
@@ -30,37 +62,133 @@ body{
     display: flex;
     align-items: center;
     color: #ffe4c4;
-
+    margin: 0%;
+    padding: 0%;
     
 }
 
 #About-Me{
+
+    background-color: #070f1d;
+    opacity: 1;
+    background-image:  radial-gradient(#4ab9d5 1px, transparent 1px), radial-gradient(#fbf3e9 1px, #070f1d 1px);
+    background-size: 80px 80px;
+    background-position: 0 0,40px 40px;
     top: 0vh;
-    padding: 0% 10%;
-    background-image: url(/img/General/nature.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    padding: 0% 5%;
+
     text-align: center;
     height: 100vh ;
     position: fixed;
     z-index: -1;
     display: flex;
-    flex-direction: column;
+
     justify-content: center;
     align-items: center;
     width: 100vw;
 }
-#About-Me h1{
-    font-size: 2.5rem;
-    color: antiquewhite;
+#About-Me h1, #About-Me h2{
 
+    color: antiquewhite;
+    margin: 2%;
+    padding: 0%;
+   
 }
 
 #About-Me p{
-    margin-top: 5vh;
+    margin-top: 2.5vh;
     padding: 2%;
     color: beige;
-    font-size: 1.5rem;       
+    font-size: 1.3rem;       
+}
+
+.line-drawing{
+    height: 2px;
+    width: 100%;
+    margin: 0%;
+    padding: 0%;
+    background-color: #4ab9d5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.circle-drawing{
+    height: 15px;
+    width: 15px;
+    border: 2px #4ab9d5 solid;
+    margin: 0%;
+    padding: 0%;
+    border-radius: 50%;
+    background-color: #070f1d;
+}
+
+.cont-img{
+
+    height: 250px;
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#About-Me img{
+    height: 200px;
+}
+#About-Me .planet img{
+    height: 180px;
+}
+
+.spaceship{
+    -webkit-animation: mover 1.2s infinite  alternate;
+    animation: mover 1.2s infinite  alternate;
+}
+
+.statistics{
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+
+.programming{
+    -webkit-animation: mover 1.4s infinite  alternate;
+    animation: mover 1.4s infinite  alternate;
+}
+
+.planet{
+    -webkit-animation: mover 1.5s infinite  alternate;
+    animation: mover 1.4s infinite  alternate;
+}
+
+
+@-webkit-keyframes mover {
+    0% { transform: translateY(0); }
+    
+    100% { transform: translateY(-10px); }
+}
+@keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+.controls{
+    position: fixed;
+    display: none;
+    flex-direction: column;
+    background-color: #fbf3e9;
+    bottom: 3%;
+    right: 2%;
+    background-color: transparent;
+    z-index: 1;
+}
+
+.controls img{
+    height: 30px;
+
+}
+.About-imgs{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 /*--------------VALORES-----------------*/
@@ -69,8 +197,13 @@ body{
     text-align: center;
     height: 100vh;
     /* margin-top: 100vh; */
-    background:  #070f1d;
+    background-color: transparent;
+    /* opacity: 1;
+    background-image:  radial-gradient(#4ab9d5 1px, transparent 1px), radial-gradient(#fbf3e9 1px, #070f1d 1px);
+    background-size: 80px 80px;
+    background-position: 0 0,40px 40px; */
     overflow: hidden;
+    padding: 1% 7%;
 }
 .V1{
     display: flex;
@@ -78,9 +211,11 @@ body{
     justify-content: space-evenly;
     align-items: center;
     background-color: bisque;
-    height: 31vh;
+    height: 20vh;
     color: #070f1d;
+
 }
+
 .V2{
     display: flex;
     flex-direction: column;
@@ -88,18 +223,21 @@ body{
     align-items: center;
     color: bisque;
     background-color: #070f1d;
-    height: 31vh;
+    height: 20vh;
 
 }
 
 .V3{
     background:  linear-gradient(180deg,#070f1d 10%,#11203e 100%);
-    height: 31vh;
+    height: 45vh;
     color: #ffe4c4;
     padding: 2%;
 }
 #Valores p{
     margin: 0% 10%;
+    padding: 3%;
+    font-size: 1.3em;
+
 }
 
 
@@ -110,7 +248,7 @@ body{
     overflow: hidden;
     /* background-color: aqua; */
     color: #ffe4c4;
-    padding: 0%;
+    padding: 2% 7% 5% 7%;
     margin-top: 100vh;
 }
 .height-100vh-3{
@@ -132,92 +270,48 @@ body{
 
 #Tecnologias{
     
-    padding: 1% 5%;
+    padding:2% 7% 5% 7%;
     background:  linear-gradient(180deg,#070f1d 10%,#11203e 100%);
     height: 100vh;
     color: #ffe4c4;
-
-}
-
-#Tecnologias h3{
-    text-align: center;
-}
-
-.Card-01{
-    border: 1px #ffe4c4 solid;
     
 }
-.Tec-Header{
-    display: flex;
-    align-items: center;
-    color: #ffe4c4;
-    height: 7vh;
-}
-.Tec-Header button{
-   padding: 5px;
-   border: #ffe4c4 2px solid;
-   color: #ffe4c4;
-   margin: 0% 5%;
-   background-color: #070f1d;
+
+.img-tec span{
+    position: relative;
+    display: block;
+	z-index: -1;
+	margin: 0;
+	padding: 0;
+    left: 10px;
+    bottom: -10px;
+	color: rgb(232, 228, 228);
+    -webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+    opacity: 0;
+    font-size: x-small;
 }
 
-.caro-item{
-    height: 100%;
+img:hover +span {
+    z-index: 1;
+	opacity: 1;
 }
+
 #Tecnologias img{
-     height: 70px; 
-     filter: drop-shadow(0 0 0.75rem rgb(20, 210, 220));
- }
-
- #Tecnologias img:hover{
-
-    filter: drop-shadow(0 0 1.5rem rgb(20, 210, 220));
+    height: 50px; 
+    filter: drop-shadow(0 0 0.75rem rgb(87, 193, 177));
+    transition: transform .2s;
 }
- .Card-ProGeneral{
-    margin-top: 6.5vh;
-    background-color: aliceblue;
-    padding: 1%;
-    
- }
-.Row-100{
-    height: 100%;
+
+
+
+#Tecnologias img:hover{
+
+    transform: scale(1.5);
+    filter: drop-shadow(0 0 2rem rgb(229, 172, 40));
 
 }
 
- #Tecnologias h1{
-    color: #ffe4c4;
-    padding: 1% 0%;
- }
-
-
-/*-----------------EXPERIENCIA---------------------*/
-
- #Experiencia{
-
-    background-color: #070f1d;
-    color: bisque;
-    height: 100vh;
-    overflow: hidden;
-    border-bottom: 1px #ffe4c4 solid;
- }
- #Experiencia .Exp-Main{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 93vh;
- }
- #Experiencia h3{
-    color: aqua;
-    text-align: center;
- }
-
- #Experiencia ul,h4{
-    list-style: none;
-    margin: 0% 10%;
-} 
-#Experiencia ul li::before{
-    content: "🚀    ";
-} 
 /* ------------------contacto-------------------------- */
 #Contact{
     text-align: center;
@@ -239,6 +333,9 @@ body{
      height: 25px;
  }
 
+
+
+/* ------------------ TABLET -------------------------- */
 @media (max-width:960px) {
     .height-100vh-3{
         height: 32vh;   
@@ -255,17 +352,14 @@ body{
     .caro-item{
         height: 60vh;
     }
-    #Tecnologias{
-        height: auto;
-        
-    }
+
     .About-Project{
         position: absolute;
         background-color: transparent;
-        bottom: 4rem;
-        height: auto;
+        bottom: -10px;
+        height: 120px;
         background-color: #11203e;
-        opacity: 0.6;
+        opacity: 0.0;
 
     }
     .About-Project:hover{
@@ -273,13 +367,17 @@ body{
     
     }
 }
-@media  (max-width: 600px)  {
 
+/* ------------------ SMARTPHONE-------------------------- */
+@media  (max-width: 600px)  {
+    #About-Me{
+        flex-direction: column;
+    }
     #About-Me p{
       font-size: 1rem;
-
+  
     }
-    #AValores{
+    #Valores{
         height: auto;
       }
     .V1{
@@ -323,6 +421,34 @@ body{
         justify-content: space-evenly;
     }
     .About-Project{
-        bottom: 3rem;
+        bottom: -10px;
+
     }
+
+    .section-tec{
+        height: 300px;
+
+    }
+    .About-imgs{
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        padding:50px 0px ;
+    }
+
+    .cont-img{
+
+        height: 100px;
+        width: 100px;
+    
+    }
+    
+    #About-Me img{
+        height: 100px;
+    }
+    #About-Me .planet img{
+        height: 80px;
+        margin-top: 5px;
+    }
+
 } 
